--- a/gatling-jdbc/pom.xml
+++ b/gatling-jdbc/pom.xml
@@ -19,6 +19,14 @@
 			<groupId>com.excilys.ebi.gatling</groupId>
 			<artifactId>gatling-core</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>org.apache.tomcat</groupId>
+			<artifactId>tomcat-jdbc</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>com.googlecode</groupId>
+			<artifactId>tomcat-slf4j</artifactId>
+		</dependency>
 	</dependencies>
 
 	<build>
